--- a/wedding.html
+++ b/wedding.html
@@ -72,8 +72,8 @@
             <p class="subheading secondary-color mt20 launchaco-builder-hoverable">One fateful day in Austin, TX Rob and
                 Courtney met while both being guests at the same co-living hub on Airbnb.
                 The intrepid travelers hit it
-                off while attending an art show that also served pancakes with some of the other residents at their
-                shared Airbnb and the rest was history.
+                off while attending an art show that pancakes with some of the other residents at their
+                 Airbnb and the rest was history.
             <b> <b>
                 🥞🎨
             </p>
@@ -104,10 +104,9 @@
                     <div><b class="bold primary-color">Courtney Hood</b>
                         <p class="paragraph primary-color mt10">Bride 👰</p>
                         <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite
-                            book is Ella Enchanted and thinks Disney needs to hire her to remake that piece-of-trash
+                            book is Ella Enchanted and thinks Disney needs to hire her to remake the terrible
                             movie version with Anne Hathaway. She would not be against anyone making a Change.Org
-                            petition to help her cause. But in all seriousness, her goal is to see as much of this wild
-                            world as possible and is extremely happy to have found, not only a travel partner, but a
+                            petition to help her cause. But in all seriousness, her goal is to see as much of this planet as possible and is extremely happy to have found, not only a travel partner, but a
                             life partner along the way.</p>
                     </div>
                     <!---->
@@ -122,7 +121,7 @@
                         <p class="paragraph primary-color mt10">Groom🤵</p>
                         <p class="paragraph secondary-color mt20">Sexy, gorgeous and humble. Robert James works as a
                             software engineer while traveling the world with the amazing Courtney. Born and raised in
-                            Ireland, Robert is passionate and strives to make the world wide web friendlier for all!
+                            Ireland, Robert is passionate about his work and strives to make the world wide web friendlier for all!
                             Rob's hidden talent is that he can shite-talk with the best of them and will chat your leg
                             off with his Irish gift-of-the-gab if you give him half a chance.</p>
                     </div>
@@ -185,7 +184,7 @@
                     Frequently Asked Questions
                 </h3>
                 <p class="subheading secondary-color mt20 launchaco-builder-hoverable">Can't find an answer? Don't
-                    hesitate to reach out!.
+                    hesitate to reach out!
 
                 </p>
             </div>
@@ -207,13 +206,12 @@
                             target="_blank">Cork city center</a>. It also has the best airport art installation you’ll
                         ever see, Redhead Exhibition showcasing various portraits of people with ginger hair.
                         <br>
-                        Irish Airport
-                        <br>
                         Flights to this airport tend to be a bit pricier than flights to….
                         <br>
                         <a href="https://www.dublinairport.com/" target="_blank">Dublin Airport (DUB)</a> usually has
                         cheaper flights and would be a good option for those extending their trip to see more of
-                        Ireland. Dublin is a 3-hour drive or very inexpensive and easy 3-hour bus trip using GoBus.ie.
+                        Ireland. Dublin is a 3-hour drive or an inexpensive and fairly easy 3-hour bus trip using 
+                        <a href="https://www.gobus.ie/" target="_blank">GoBus.ie</a>.
                         Think of it as seeing the scenery as you arrive.
                     </p>
                 </div>
@@ -227,16 +225,15 @@
                             </path>
                         </svg></label>
                     <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-                        We have blocked off rooms at The Muskerry Arms, Robert’s families pub in the quaint village of
-                        Blarney, Ireland.
+                        We have blocked off rooms at The Muskerry Arms, Robert’s families pub and BNB in the quaint village of
+                        Blarney, Ireland. Space is limited. Reach out to Rob or Courtney or write your request to stay at The Muskerry in the RSVP comments.
                         <br>
-                        We also have rooms blocked off at Blank Hotel in Cork, very near our wedding venue.
+                        We also suggest <a href="https://www.imperialhotelcork.com/" target="_blank">The Imperial Hotel for an option to book as it's very near our wedding venue.
                         <br>
                         Rob and I couldn’t be bigger fans of <a
                             href="https://www.airbnb.com/c/robertg982?currency=USD">Airbnb</a> so if you decide to book
                         your stay using <a href="https://www.airbnb.com/c/robertg982?currency=USD">Airbnb</a> consider
-                        using our link here. You get up to $26 off your stay.Okay, sales pitch. Side note we dont work for Airbnb.
-                        over.
+                        using our link. You get up to $26 off your stay. 🤑 Okay, sales pitch over.
                     </p>
                 </div>
                 <div class="faq pad20"><input id="faq-dropdown-3-2" type="checkbox" name="faq" class="faq-input"> <label
