--- a/wedding.html
+++ b/wedding.html
@@ -228,7 +228,7 @@
                         We have blocked off rooms at The Muskerry Arms, Robert’s families pub and BNB in the quaint village of
                         Blarney, Ireland. Space is limited. Reach out to Rob or Courtney or write your request to stay at The Muskerry in the RSVP comments.
                         <br>
-                        We also suggest <a href="https://www.imperialhotelcork.com/" target="_blank">The Imperial Hotel for an option to book as it's very near our wedding venue.
+                        We also suggest <a href="https://www.imperialhotelcork.com/" target="_blank">The Imperial Hotel</a> for an option to book as it's very near our wedding venue.
                         <br>
                         Rob and I couldn’t be bigger fans of <a
                             href="https://www.airbnb.com/c/robertg982?currency=USD">Airbnb</a> so if you decide to book
