--- a/wedding.html
+++ b/wedding.html
@@ -72,7 +72,7 @@
             <p class="subheading secondary-color mt20 launchaco-builder-hoverable">One fateful day in Austin, TX Rob and
                 Courtney met while both being guests at the same co-living hub on Airbnb.
                 The intrepid travelers hit it
-                off while attending an art show that pancakes with some of the other residents at their
+                off while attending an art show that served pancakes with some of the other residents at their
                  Airbnb and the rest was history.
             <b> <b>
                 🥞🎨
@@ -106,7 +106,7 @@
                         <p class="paragraph secondary-color mt20">Courtney is a video makin' vagabond who's favorite
                             book is Ella Enchanted and thinks Disney needs to hire her to remake the terrible
                             movie version with Anne Hathaway. She would not be against anyone making a Change.Org
-                            petition to help her cause. But in all seriousness, her goal is to see as much of this planet as possible and is extremely happy to have found, not only a travel partner, but a
+                            petition to help her cause. But in all seriousness, her goal is to see as much of this planet as possible and is extremely happy to have found, not only a travel partner but a
                             life partner along the way.</p>
                     </div>
                     <!---->
@@ -119,7 +119,7 @@
                     </div>
                     <div><b class="bold primary-color">Robert James Gabriel</b>
                         <p class="paragraph primary-color mt10">Groom🤵</p>
-                        <p class="paragraph secondary-color mt20">Sexy, gorgeous and humble. Robert James works as a
+                        <p class="paragraph secondary-color mt20">Sexy, gorgeous and humble. 😂 Robert James works as a
                             software engineer while traveling the world with the amazing Courtney. Born and raised in
                             Ireland, Robert is passionate about his work and strives to make the world wide web friendlier for all!
                             Rob's hidden talent is that he can shite-talk with the best of them and will chat your leg
@@ -225,7 +225,7 @@
                             </path>
                         </svg></label>
                     <p class="paragraph secondary-color faq-content mt20 launchaco-builder-hoverable">
-                        We have blocked off rooms at The Muskerry Arms, Robert’s families pub and BNB in the quaint village of
+                        We have blocked off rooms at <a href="http://www.muskerryarms.com/">The Muskerry Arms</a>, Robert’s families' pub and BNB in the quaint village of
                         Blarney, Ireland. Space is limited. Reach out to Rob or Courtney or write your request to stay at The Muskerry in the RSVP comments.
                         <br>
                         We also suggest <a href="https://www.imperialhotelcork.com/" target="_blank">The Imperial Hotel</a> for an option to book as it's very near our wedding venue.
