--- a/wedding.html
+++ b/wedding.html
@@ -149,8 +149,8 @@
                             target="_blank">St Peters, N Main St, Centre, Cork, Ireland</a>
                     </p>
                     <p class="paragraph secondary-color launchaco-builder-hoverable">
-                     Reception:    <a href="https://www.google.com/maps/place/Deep+South+Cork/@51.8963059,-8.4772355,17z/data=!3m1!4b1!4m5!3m4!1s0x4844901a73b5c595:0xa2080b5c9c9e1bab!8m2!3d51.8963026!4d-8.4750415"
-                            target="_blank">Deep South, 51 Grand Parade, Centre, Cork, Ireland</a>
+                     Reception:    <a href="https://www.google.com/maps/place/Muskerry+Arms+Bar+and+B%26B+Blarney/@51.933051,-8.5698507,17z/data=!3m1!4b1!4m8!3m7!1s0x4844917b2b733deb:0x5b9da693e0bf71ca!5m2!4m1!1i2!8m2!3d51.933051!4d-8.567662"
+                            target="_blank">Muskerry arms, The Square, Monacnapa, Blarney, Co. Cork, Ireland</a>
                     </p>
                 </div>
                 <div class="faq pad20"><b class="bold primary-color launchaco-builder-hoverable">
